--- a/src/sass/components/_footer.scss
+++ b/src/sass/components/_footer.scss
@@ -174,6 +174,13 @@ footer {
   left: 0;
   opacity: 0.1;
 }
+.contacts * {
+  font-family: Open Sans;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 18px;
+  line-height: 30px;
+}
 .contacts {
   display: block;
   width: 100%;
@@ -182,6 +189,7 @@ footer {
   background-size: cover;
   padding-top: 84px;
   padding-bottom: 84px;
+
   background-image: url(/images/footer/footer_back.png),
     linear-gradient(#111319, #111319);
   margin-right: 31p;
